--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'English drama -- 19th century'
 - !lcsh 'Comedies'
+- GITenberg
 title: 'The Cabinet Minister: A farce in four acts'
 url: http://www.gutenberg.org/ebooks/33957
